--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-
+/*
 @media only screen and (max-width: 1024px) {
 	.span_2_of_2 {
 		width: 100%; 
@@ -21,4 +21,4 @@
     .input-one{
         display: inline-flex;
     }
-}
+}*/
