--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,28 @@ h2::after{
     font-size: 3vw;
     text-transform: capitalize;
 }
+
+@media only screen and (max-width: 480px) {
+    input{
+        margin-top: 0;
+
+    }
+    .btn{
+        margin-top: 1.5rem;
+    }
+    .little-description{
+        margin-bottom: .5rem;
+    }
+    .row{
+        margin-top: 0;
+    }
+    .col{
+        margin: 0;
+    }
+    .contact{
+        padding: 1rem;
+    }
+    .h2::after{
+        margin: 1rem;
+    }
+}
