--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,7 @@ h2::after{
    
     color: #fff;
     text-align: center;
-    background:linear-gradient( rgba(60, 85, 161, 0.5), rgba(60, 83, 153, 0.5)),url(../images/support-24-7.jpg);
-    background-repeat: no-repeat;
+    background:linear-gradient( #273971d3,#273971d0);
     background-size: 100% 100%;
     background-attachment: fixed;
     
